--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Paver, a jQuery plugin for easy panorama viewing</title>
-	<meta http-equiv="refresh" content="0; url=http://terrymun.github.io/paver/demo/index.html" />
+	<title>USA 2024 | Panoramen</title>
+	<meta http-equiv="refresh" content="0; url=http://paukhard.github.io/paver/demo/index.html" />
 </head>
 <body></body>
 </html>
