--- a/demo/index.html
+++ b/demo/index.html
@@ -14,10 +14,10 @@
 <body>
 	<main id="content">
 			<figure>
-				<div data-paver><img src="./images/p1.jpg" title="The Aarhusian Sunset" alt="A panorama taken from the roof of my penthouse unit in the heart of Aarhus." /></div>
+				<div data-paver><img src="./images/IMG_0139.jpeg" title="The Aarhusian Sunset" alt="A panorama taken from the roof of my penthouse unit in the heart of Aarhus." /></div>
 				<figcaption>
-					<span class="title">The Aarhusian Sunset</span>
-					<span class="desc">A panorama taken from the roof of my penthouse unit in the heart of Aarhus.</span>
+					<span class="title">Death Valley Sunset</span>
+					<span class="desc">A panorama taken from a parking lot in the Death Valley National Park.</span>
 				</figcaption>
 			</figure>
 			<h3 id="features">Features</h3>
