--- a/demo/index.html
+++ b/demo/index.html
@@ -14,10 +14,18 @@
 <body>
 	<main id="content">
 			<figure>
-				<div data-paver><img src="./images/IMG_0139.jpeg" title="The Aarhusian Sunset" alt="A panorama taken from the roof of my penthouse unit in the heart of Aarhus." /></div>
+				<div data-paver><img src="./images/IMG_0139.jpeg" title="Death Valley Sunset" alt="A panorama taken from a parking lot in the Death Valley National Park." /></div>
 				<figcaption>
 					<span class="title">Death Valley Sunset</span>
 					<span class="desc">A panorama taken from a parking lot in the Death Valley National Park.</span>
+				</figcaption>
+			</figure>
+
+			<figure>
+				<div data-paver><img src="./images/IMG_0139.jpeg" title="The Aarhusian Sunset" alt="A panorama taken from the roof of my penthouse unit in the heart of Aarhus." /></div>
+				<figcaption>
+					<span class="title">Horseshoe Bend Tourism</span>
+					<span class="desc">Not that many tourists, right?</span>
 				</figcaption>
 			</figure>
 			<h3 id="features">Features</h3>
