--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
 			</figure>
 
 			<figure>
-				<div data-paver><img src="./images/IMG_0139.jpeg" title="The Aarhusian Sunset" alt="A panorama taken from the roof of my penthouse unit in the heart of Aarhus." /></div>
+				<div data-paver><img src="./images/Img1318.jpg" title="Horseshoe Bend Tourism" alt="Not that many tourists, right?" /></div>
 				<figcaption>
 					<span class="title">Horseshoe Bend Tourism</span>
 					<span class="desc">Not that many tourists, right?</span>
