--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Paver, a jQuery plugin for easy panorama viewing</title>
+	<title>USA 2024 | Panoramen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css" media="all" rel="stylesheet" />
