--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
 				<div data-paver><img src="./images/IMG_0139.jpeg" title="Death Valley Sunset" alt="A panorama taken from a parking lot in the Death Valley National Park." /></div>
 				<figcaption>
 					<span class="title">Death Valley Sunset</span>
-					<span class="desc">A panorama taken from a parking lot in the Death Valley National Park.</span>
+					<span class="desc">Father Crowley Vista Point - Rainbow Canyon, 27.08.2024</span>
 				</figcaption>
 			</figure>
 
@@ -25,61 +25,13 @@
 				<div data-paver><img src="./images/Img1318.jpg" title="Horseshoe Bend Tourism" alt="Not that many tourists, right?" /></div>
 				<figcaption>
 					<span class="title">Horseshoe Bend Tourism</span>
-					<span class="desc">Not that many tourists, right?</span>
+					<span class="desc">Horseshoe Bend Trail, 31.08.2024</span>
 				</figcaption>
 			</figure>
-			<h3 id="features">Features</h3>
-			<ul>
-				<li id="features__motion-detection">
-					<h4>Orientation-adjusted motion detection</h4>
-					<p>Paver uses <code>deviceorientation</code> to access the gyroscope data from a device, if available. It translates rotation along the x and z axis into panning action. More importantly, Paver intelligently sniffs out the screen orientation in order to perform motion translation properly.</p>
-				</li>
-				<li id="features__mouse-movements">
-					<h4>Mouse as a panning proxy</h4>
-					<p>Paver listens to jQuery's proprietary <code>mousemove</code> event, where the cursor position relative to the panorama container is recorded. Paver uses these coordinates to move the inner panorama image using CSS3 transforms.</p>
-				</li>
-				<li id="features__mobile-friendly">
-					<h4>Responsive &amp; mobile-friendly</h4>
-					<p>Paver reacts to viewport size changes, and is smart enough to determine when panning is no longer necessary in order to view the panorama in its entirety. It also intelligently checks on screen orientation on mobile devices, so it will work flawlessly regardless of your device orientation.</p>
-				</li>
-				<li id="features__graceful-degradation">
-					<h4>Graceful degradation</h4>
-					<p>No JS? No problem&mdash;<a href="#basic-styles" title="Rudimentary CSS needed for no-JS support.">with the basic styles in place</a>, your panorama can still be viewed in its all its beauty even when the end-user have JavaScript turned off in their browser. Paver also offers the option to <a href="./usage-notes.html#config__failure-message" title="">display failure messages</a> when gyroscopic data is unavailable on mobile, touch-based devices.</p>
-				</li>
-			</ul>
-			<figure>
-				<div data-paver><img src="./images/p2.jpg" title="Godsbanen" alt="A Sunday morning walk to the rooftop of Godsbanen, Aarhus." /></div>
-				<figcaption>
-					<span class="title">Godsbanen</span>
-					<span class="desc">A Sunday morning walk to the rooftop of Godsbanen, Aarhus.</span>
-				</figcaption>
-			</figure>
-			<p>The panorama above has a smaller aspect ratio than normal: Paver only kicks in when the viewport is narrow enough&mdash;so, resize away and see what happens.</p>
-		</section>
-		
-		<section>
-			<h2 id="further-information">Further Information</h2>
-
-			<h3 id="usage-notes">Usage notes &amp; plugin configuration</h3>
-			<p>For detailed usage notes, please refer to the <a href="./usage-notes.html" title="Usage Notes">Usage Notes</a> page. Plugin configuration options are also available in the page.</p>
-
-			<h3 id="advanced-usage">Advanced usage</h3>
-			<p>For examples of advanced usage, please refer to the <a href="./advanced-usage.html" title="Advanced Usage">Advanced Usage</a> page.</p>
-
-			<h3 id="custom-triggers-events">Custom triggers &amp; events</h3>
-			<p>Paver supports custom triggers, which allows developers to force recomputation in the event of user-interaction that is not predicted, due to its non-exhaustiveness and limitless possibilities, by the plugin. In addition, Paver will also fire custom events to allow developers to track the initialization progress of the plugin. Please refer to <a href="./custom-triggers-events.html" title="Custom Triggers &amp; Events">Custom Triggers &amp; Events</a> for more information.</p>
-			
-		</section>
 	</main>
 
 	<footer>
 		<a href="#" id="up" class="icon-font"></a>
-		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 516 560" xml:space="preserve">
-			<g>
-				<polygon class="fill" points="0,0 0,158 165,158 258,306 351,158 516,158 516,0"></polygon>
-				<polygon class="fill" points="165,366 258,507 351,366 351,560 165,560"></polygon>
-			</g>
-		</svg>
 		<p>Code, design &amp; photos by <a href="http://terrymun.com/" title="Terry Mun">Terry Mun</a> &middot; 2015</p>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
